Add google analytics

--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@ opacity:0.0;
 </style>
 
   <title>Parks House Archive</title>
+
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107671984-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-107671984-1');
+</script>
+
 </head>
 
 <body>
