--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Welcome to the Parks House Archive, incuding an archive of the Parks House Scrib
       <td colspan="6">1967-68 Volume 9</td>
     </tr>
     <tr>
-      <td><a href="scribe-v09-1-19670911.htm"
+      <td><a href="scribe-v09-1-19670911.html"
         name="scribe-v09-1-19670911.htm">Issue 1<br>
         September 11<br>
         <br>
