--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@ Welcome to the Parks House Archive, incuding an archive of the Parks House Scrib
   <tr class="alt">
       <td colspan="6">1970-71 Volume 12</td>
     </tr>
-    <tr>
-      <td><a href="pdf/scribe-v12-1-19700926.pdf"><img
+    <tr>      <td><a href="pdf/scribe-v12-1-19700926.pdf"><img
         src="pics/scribe-v12-1-19700926thm.jpg" alt="Thumbnail"> <br>
         Issue 1<br>
         September 26</a> </td>
@@ -230,7 +229,7 @@ Welcome to the Parks House Archive, incuding an archive of the Parks House Scrib
 Please send email, comments, suggestions, contributions to:
 <P><A HREF="MAILTO:parks_house@comcast.net">parks_house@comcast.net</A></p>
 Webmaster Alan Oliver<BR>
-Revised 10/6/17
+Revised 10/9/17
 </div> 
 </body>
 </html>
