--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ opacity:0.0;
 
 </style>
 
-  <title>Parks House Archive</title>
+  <title>Parks House Scribe</title>
 
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107671984-1"></script>
@@ -67,9 +67,15 @@ opacity:0.0;
 </head>
 
 <body>
-Welcome to the Parks House Archive, incuding an archive of the Parks House Scribe.
+<!--Welcome to the Parks House Archive, incuding an archive of the Parks House Scribe.-->
 <div align="center">
 <TABLE CELLPADDING=5 CELLSPACING=0 WIDTH=850 BORDER=1>
+
+<tr >
+      <td bgcolor=#ffffff colspan="6"><IMG SRC="pics/masthead.jpg" ALT="Masthead" > </td>
+    </tr>
+
+
 <TR>
 	<TD WIDTH="50%" COLSPAN=2 ROWSPAN=1>Arland Reinhard <BR>Editor 1968-69  Volume 10</TD>
 	<TD WIDTH="50%" COLSPAN=2>David Tutacko <BR>Editor 1969-72 Volumes 11, 12, 13</TD>
@@ -79,10 +85,7 @@ Welcome to the Parks House Archive, incuding an archive of the Parks House Scrib
 </TD><TD COLSPAN=2>Bio, awards, achievments, including links to any personal web pages or projects</TD></TR>
 </TABLE><P>
 <table cellspacing=5 style=width:850px  > 
-    <tr >
-      <td bgcolor=#ffffff colspan="6"><IMG SRC="pics/masthead.jpg" ALT="Masthead" > </td>
-    </tr>
-<TR class="blank"><TD> </TD></TR>
+    <TR class="blank"><TD> </TD></TR>
     <tr class="alt">
       <td colspan="6">1967-68 Volume 9</td>
     </tr>
@@ -168,7 +171,8 @@ Welcome to the Parks House Archive, incuding an archive of the Parks House Scrib
   <tr class="alt">
       <td colspan="6">1970-71 Volume 12</td>
     </tr>
-    <tr>      <td><a href="pdf/scribe-v12-1-19700926.pdf"><img
+    <tr>
+      <td><a href="pdf/scribe-v12-1-19700926.pdf"><img
         src="pics/scribe-v12-1-19700926thm.jpg" alt="Thumbnail"> <br>
         Issue 1<br>
         September 26</a> </td>
