--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ opacity:0.0;
 <body>
 <!--Welcome to the Parks House Archive, incuding an archive of the Parks House Scribe.-->
 <div align="center">
+UNDER CONSTRUCTION
 <TABLE CELLPADDING=5 CELLSPACING=0 WIDTH=850 BORDER=1>
 
 <tr >
