--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ opacity:0.0;
   gtag('config', 'UA-107671984-1');
 </script>
 
+<meta name="keywords" content="Parks House,Scribe,Wright Quad,student publication" />
+
 </head>
 
 <body>
@@ -74,17 +76,29 @@ UNDER CONSTRUCTION
 
 <tr >
       <td bgcolor=#ffffff colspan="6"><IMG SRC="pics/masthead.jpg" ALT="Masthead" > </td>
-    </tr>
+</tr>
+</TABLE><P>
 
+<table cellspacing=5 style=width:850px  >
 
 <TR>
 	<TD WIDTH="50%" COLSPAN=2 ROWSPAN=1>Arland Reinhard <BR>Editor 1968-69  Volume 10</TD>
 	<TD WIDTH="50%" COLSPAN=2>David Tutacko <BR>Editor 1969-72 Volumes 11, 12, 13</TD>
 </TR>
-<TR><TD  WIDTH="25%" ><IMG SRC="pics/arlandreinhardthm.jpg" ALT="Arland Reinhard"  BORDER=0></TD><TD WIDTH="25%"><IMG SRC="pics/arlandscanthm.jpg" ALT="Arland Now" BORDER=0></TD><TD  WIDTH="25%" ><IMG SRC="pics/davidtutackothm.jpg" ALT="David Tutacko"  BORDER=0></TD><TD  WIDTH="25%" ><IMG SRC="pics/davidnowthm.jpg" ALT="David Now" BORDER=0></TD></TR>
-<TR><TD COLSPAN=2>Arland (BS Bus '70, MS Educ '71) retired in June 2010 following 40 years of classroom teaching as a Business and Vocational Education teacher. He taught from 1970-1990 at Fort Wayne Community Schools' Elmhurst High School, then from 1990-2010 at Southwest Allen County Schools' Homestead High School, Fort Wayne. He was the 2005 Southwest Allen County Schools Teacher of the Year, and 1 of 10 finalists for the 2006 Indiana Teacher of the Year. In addition to teaching, in 1972 Arland began escorting groups to 6 continents as President/Owner of Arland Reinhard Tours, Inc. Forty years later, in 2012, he retired from the tour business. His interest in travel was sparked by his first Parks House roomie, Larry Rose, whose interest in family genealogy led Arland to discover members of the Reinhard family still living in Switzerland. It was then that Arland decided he wanted to visit his cousins in Switzerland, which in turn led to his interest in traveling the world. He and his wife, Ruth, live in Bluffton, Indiana. They have 4 children and 11 grandchildren. Arland can be contacted at <A HREF="MAILTO:arland@adamswells.com">arland@adamswells.com</A>.
-</TD><TD COLSPAN=2>Bio, awards, achievments, including links to any personal web pages or projects</TD></TR>
-</TABLE><P>
+<TR>
+	<TD  WIDTH="25%" ><IMG SRC="pics/arlandreinhardthm.jpg" ALT="Arland Reinhard"  BORDER=0></TD>
+	<TD  WIDTH="25%"><IMG SRC="pics/arlandscanthm.jpg" ALT="Arland Now" BORDER=0></TD>
+	<TD  WIDTH="25%" ><IMG SRC="pics/davidtutackothm.jpg" ALT="David Tutacko"  BORDER=0></TD>
+	<TD  WIDTH="25%" ><IMG SRC="pics/davidnowthm.jpg" ALT="David Now" BORDER=0></TD></TR>
+<TR>
+	<TD COLSPAN=2>Arland (BS Bus '70, MS Educ '71) retired in June 2010 following 40 years of classroom teaching as a Business and Vocational Education teacher. He taught from 1970-1990 at Fort Wayne Community Schools' Elmhurst High School, then from 1990-2010 at Southwest Allen County Schools' Homestead High School, Fort Wayne. He was the 2005 Southwest Allen County Schools Teacher of the Year, and 1 of 10 finalists for the 2006 Indiana Teacher of the Year. In addition to teaching, in 1972 Arland began escorting groups to 6 continents as President/Owner of Arland Reinhard Tours, Inc. Forty years later, in 2012, he retired from the tour business. His interest in travel was sparked by his first Parks House roomie, Larry Rose, whose interest in family genealogy led Arland to discover members of the Reinhard family still living in Switzerland. It was then that Arland decided he wanted to visit his cousins in Switzerland, which in turn led to his interest in traveling the world. He and his wife, Ruth, live in Bluffton, Indiana. They have 4 children and 11 grandchildren. Arland can be contacted at <A HREF="MAILTO:arland@adamswells.com">arland@adamswells.com</A>.</TD>
+
+	<TD COLSPAN=2><IMG SRC="pics/logo04indiana_hoosiers.png" ALT="IU Logo"<!--Bio, awards, achievments, including links to any personal web pages or projects--></TD>
+</TR>
+</TABLE>
+
+<P>
+
 <table cellspacing=5 style=width:850px  > 
     <TR class="blank"><TD> </TD></TR>
     <tr class="alt">
@@ -138,7 +152,7 @@ UNDER CONSTRUCTION
         Issue 6<br>
         May 9</a> </td>
     </tr>
-<TR class="blank"><TD></TD></TR>
+    <TR class="blank"><TD></TD></TR>
     <tr class="alt">
       <td colspan="6">1969-70 Volume 11</td>
     </tr>
@@ -196,9 +210,9 @@ UNDER CONSTRUCTION
       <td><a href="pdf/scribe-v12-6-19710520.pdf"><img
         src="pics/scribe-v12-6-19710520thm.jpg" alt="Thumbnail"> <br>
         Issue 6<br>
-        May 2</a> </td>
+        May 20</a> </td>
     </tr>
-<TR class="blank"><TD></TD></TR>
+    <TR class="blank"><TD></TD></TR>
     <tr class="alt">
       <td colspan="6">1971-72 Volume 13</td>
     </tr>
@@ -234,7 +248,7 @@ UNDER CONSTRUCTION
 Please send email, comments, suggestions, contributions to:
 <P><A HREF="MAILTO:parks_house@comcast.net">parks_house@comcast.net</A></p>
 Webmaster Alan Oliver<BR>
-Revised 10/9/17
+Revised 11/26/17
 </div> 
 </body>
 </html>
